--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
+    "fast-csv": "^4.3.6",
     "venom-bot": "^5.0.21"
   }
 }
